更新项目以支持JavaFX，添加图形用户界面，重构路径查找服务，使用DenseDijkstra算法替代传统Dijkstra，新增距离缓存和路径重建功能，同时更新README以反映新特性。